update: updated code

--- a/HTML/BOOTSTRAP LANDING PAGE/bootstrap index.html
+++ b/HTML/BOOTSTRAP LANDING PAGE/bootstrap index.html
@@ -120,6 +120,15 @@
         </section>
   
          <!-- code and coffee section  -->
+
+         <div>
+          <p>yea yea yea</p>
+         </div>
+
+         
+         <div>
+          <p>A New Push</p>
+         </div>
   
         <section class="coffeeSection container-fluid">
           <div
